improvement in comments

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -201,7 +201,7 @@
       </div>
     </div>
   </section>
-  <!-- Reviews -->
+  <!-- Testimonials -->
   <section class="reviews">
     <div class="max-w-5xl mx-auto p-8">
       <h2
