LoremIpsum replaced with real features description

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -115,10 +115,10 @@
             Search for Stocks in Market
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-            beatae tempore quibusdam nobis, delectus optio quam voluptas in
-            expedita, ab cumque quidem voluptatem quisquam animi, tenetur
-            suscipit sint quod nulla!
+            You can search for multiple stocks from different companies and know
+            their insights from past trends. The User Interface will make it
+            easy for you to navigate through the web app. You can also mark your
+            favourite stocks to keep a track of the companies.
           </p>
         </div>
         <div class="hidden md:block img-box w-1/2 h-1/2">
@@ -139,10 +139,10 @@
             View Analysis of a stock
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-            beatae tempore quibusdam nobis, delectus optio quam voluptas in
-            expedita, ab cumque quidem voluptatem quisquam animi, tenetur
-            suscipit sint quod nulla!
+            We provide Analysis of a stock from a particular company as well in
+            the form of graphs and other related information like market
+            capital, profit margin and loads of other things. You can buy the
+            stocks easily and securely.
           </p>
         </div>
         <div class="hidden md:block img-box w-1/2 h-1/2">
@@ -161,10 +161,11 @@
             Buy and Sell stocks
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-            beatae tempore quibusdam nobis, delectus optio quam voluptas in
-            expedita, ab cumque quidem voluptatem quisquam animi, tenetur
-            suscipit sint quod nulla!
+            Buying and selling stocks was never this easier, we have made a
+            wallet for you where you can transfer your balance and directly make
+            payments while buying a stock. You can also buy multiple stocks. We
+            provide a confirmation email as well to make sure it was you doing
+            the transaction.
           </p>
         </div>
         <div class="hidden md:block img-box w-1/2 h-1/2">
@@ -185,10 +186,10 @@
             Safe Payment Gateway with Stripe
           </h3>
           <p class="text-sm md:text-lg lg:text-xl text-gray-600">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime
-            beatae tempore quibusdam nobis, delectus optio quam voluptas in
-            expedita, ab cumque quidem voluptatem quisquam animi, tenetur
-            suscipit sint quod nulla!
+            We have created a wallet for our app where you can add balance with
+            the help of secure payment gateway with stripe which is really
+            popular for all transactions internationally as well. Don't worry
+            your money is safe with us!
           </p>
         </div>
         <div class="hidden md:block img-box w-1/2 h-1/2">
@@ -202,7 +203,7 @@
     </div>
   </section>
   <!-- Testimonials -->
-  <section class="reviews">
+  <section class="testimonials">
     <div class="max-w-5xl mx-auto p-8">
       <h2
         class="heading text-gray-800 text-3xl md:text-5xl text-center font-bold italic mb-6 underline"
@@ -313,9 +314,10 @@
                   class="text-gray-600 serif font-normal italic px-6 py-6 md:py-12 lg:px-16 md:py-6 text-md lg:text-xl"
                   x-show.transition="testimonialActive == 5"
                 >
-                  The TradeByte project is nice and all the features regarding
-                  every stock is good. The add balance with unique id is a very
-                  good idea I like all features of TradeByte.
+                  The TradeByte project is really nice and all the features are
+                  really great and insightful. I loved the wallet feature to
+                  make our work easier while buying a stock. It was a great
+                  experience working with Pavan and team.
                 </p>
               </div>
 
@@ -558,6 +560,7 @@
   </footer>
 </div>
 
+<!-- Modal for Sign In -->
 <div
   class="main-modal fixed w-full h-100 inset-0 z-50 overflow-hidden flex justify-center items-center animated fadeIn faster"
   style="background: rgba(0, 0, 0, 0.7)"
