--- a/views/market.ejs
+++ b/views/market.ejs
@@ -72,16 +72,20 @@
                   <p class="text-gray-700 break-words text-center text-base">
                     <%- compactData[i]["Company Name"] %>
                   </p>
+                  <a href="/view/<%- compactData[i]["Symbol"] %>">
                   <button
                     class="mr-1 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                   >
-                    <span class="mx-auto"><a href="/view/<%- compactData[i]["Symbol"] %>">VIEW</a></span>
+                    <span class="mx-auto">VIEW</span>
                   </button>
+                </a>
+                <a href="/cart/<%- compactData[i]["Symbol"] %>">
                   <button
                     class="w-24 pl-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                   >
-                    <span class="mx-auto"><a href="/cart/<%- compactData[i]["Symbol"] %>">BUY</a></span>
+                    <span class="mx-auto">BUY</span>
                   </button>
+                </a>
                 </div>
               </div>
             </div>
@@ -116,16 +120,20 @@
                       <%- totalData[i]["Company Name"] %>
                     </p>
                     <div class="flex justify-around px-6 md:px-2 w-2/3 mx-auto">
+                      <a href="/view/<%- totalData[i]["Symbol"] %>">
                       <button
                         class="w-20 mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                       >
-                        <span class="mx-auto"><a href="/view/<%- totalData[i]["Symbol"] %>">VIEW</a></span>
+                        <span class="mx-auto">VIEW</span>
                       </button>
+                    </a>
+                    <a href="/cart/<%- totalData[i]["Symbol"] %>">
                       <button
                         class="w-32 mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-green-400 hover:border-green-400 hover:bg-green-400 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                       >
-                        <span class="mx-auto"><a href="/cart/<%- totalData[i]["Symbol"] %>">BUY</a></span>
+                        <span class="mx-auto">BUY</span>
                       </button>
+                    </a>
                     </div>
                   </div>
                 </div>
