AddBalance & Market Page Issues Done

--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -47,10 +47,8 @@
         </div>
       </form>
 
-      <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-        <div
-          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
-        >
+      <div class="card flex flex-wrap justify-around">
+        <div class="w-auto bg-white my-4 rounded overflow-hidden shadow-lg">
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">VISA</div>
             <p
@@ -70,9 +68,7 @@
             >
           </div>
         </div>
-        <div
-          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
-        >
+        <div class="w-auto bg-white my-4 rounded overflow-hidden shadow-lg">
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">VISA PREPAID</div>
             <p
@@ -92,9 +88,7 @@
             >
           </div>
         </div>
-        <div
-          class="w-full bg-white my-4 rounded overflow-hidden shadow-lg mx-auto"
-        >
+        <div class="w-auto bg-white my-4 rounded overflow-hidden shadow-lg">
           <div class="px-6 py-4">
             <div class="font-bold text-xl mb-2">MASTERCARD</div>
             <p
