--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -92,9 +92,7 @@
             class="text-xs md:text-sm font-medium text-right text-xs lg:text-lg break-words"
             id="totalPrice"
           >
-            <span class="total-price">
-              <%= latestPrice %>
-            </span>
+            <span class="total-price"> <%= latestPrice %> </span>
             $
           </p>
         </div>
