--- a/views/market.ejs
+++ b/views/market.ejs
@@ -7,7 +7,7 @@
         <h2
           class="text-gray-700 lg:text-6xl text-5xl font-semibold leading-none tracking-wider px-5"
         >
-          Favorite Stocks
+          Popular Stocks
         </h2>
       </div>
 
@@ -72,9 +72,9 @@
                   <p class="text-gray-700 break-words text-center text-base">
                     <%- compactData[i]["Company Name"] %>
                   </p>
-                  <a href="/view/<%- compactData[i]["Symbol"] %>">
+                <a href="/view/<%- compactData[i]["Symbol"] %>">
                   <button
-                    class="mr-1 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
+                    class="mr-1 mt-6 w-14 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                   >
                     <span class="mx-auto">VIEW</span>
                   </button>
@@ -120,7 +120,7 @@
                       <%- totalData[i]["Company Name"] %>
                     </p>
                     <div class="flex justify-around px-6 md:px-2 w-2/3 mx-auto">
-                      <a href="/view/<%- totalData[i]["Symbol"] %>">
+                    <a href="/view/<%- totalData[i]["Symbol"] %>">
                       <button
                         class="w-20 mx-2 bg-white tracking-wide text-gray-700 font-bold rounded border-b-2 border-blue-500 hover:border-blue-600 hover:bg-blue-500 hover:text-white shadow-md py-2 px-2 inline-flex items-center"
                       >
