Login Page and Responsiveness Issue Solve

--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -59,11 +59,11 @@
           </div>
           <div class="px-6 pt-4 pb-2">
             <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 ml-4 mr-6 mb-2"
+              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 ml-2 mr-4 mb-2"
               >MM/YY : 01/30</span
             >
             <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mr-6 mb-2"
+              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mb-2"
               >CVC : 123</span
             >
           </div>
@@ -79,11 +79,11 @@
           </div>
           <div class="px-6 pt-4 pb-2">
             <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 ml-4 mr-6 mb-2"
+              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 ml-2 mr-4 mb-2"
               >MM/YY : 12/40</span
             >
             <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mr-6 mb-2"
+              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mb-2"
               >CVC : 555</span
             >
           </div>
@@ -99,11 +99,11 @@
           </div>
           <div class="px-6 pt-4 pb-2">
             <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 ml-4 mr-6 mb-2"
+              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 ml-2 mr-4 mb-2"
               >MM/YY : 11/31</span
             >
             <span
-              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mr-6 mb-2"
+              class="inline-block bg-gray-200 px-4 py-1 text-sm font-semibold text-gray-700 mb-2"
               >CVC : 005</span
             >
           </div>
