--- a/views/partials/_nav.ejs
+++ b/views/partials/_nav.ejs
@@ -81,7 +81,7 @@
     </div>
 
     <a
-      class="block w-2/5 md:w-4/5 max-w-xs p-2 mt-4 mb-8 mx-auto text-xs font-bold text-gray-900 focus:shadow-outline flex justify-center items-center text-sm rounded-full text-green-900 font-bold tick-background"
+      class="block w-3/4 md:w-4/5 max-w-xs p-2 mt-4 mb-8 mx-auto text-xs font-bold text-gray-900 focus:shadow-outline flex justify-center items-center text-sm rounded-full text-green-900 font-bold tick-background"
       href="#"
     >
       <div class="tick mr-1">
@@ -97,7 +97,7 @@
           <path d="M5 13l4 4L19 7"></path>
         </svg>
       </div>
-      Trading Active
+      <p class="sm:text-center">Trading Active</p>
     </a>
 
     <div class="nav-box flex flex-col justify-start">
@@ -168,7 +168,7 @@
           fill="none "
           stroke-linecap="round "
           stroke-linejoin="round "
-          stroke-width="1.5 "
+          stroke-width="1 "
           viewBox="0 0 24 24 "
           stroke="currentColor "
         >
