--- a/views/done.ejs
+++ b/views/done.ejs
@@ -97,7 +97,7 @@
             onclick="back()"
             class="bg-gray-700 hover:bg-red-400 text-white font-bold py-2 px-5 mx-2 mt-4 mb-3 rounded-full"
           >
-            <i class="far fa-times-circle"></i> Cancel
+            <i class="far fa-times-circle"></i> Home
           </button>
 
           <button
