--- a/views/layouts/app.ejs
+++ b/views/layouts/app.ejs
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
-      integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o="
-      crossorigin="anonymous"
-    />
-    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
-    <link type="text/css" rel="stylesheet" href="./css/style.css" />
-    <link type="text/css" rel="stylesheet" href="../css/style.css" />
-    <title>TradeByte</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.0-2/css/all.min.css"
+    integrity="sha256-46r060N2LrChLLb5zowXQ72/iKKNiw/lAmygmHExk/o=" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.3/dist/Chart.min.js"></script>
 
-  <body>
-    <div class="md:flex flex-col bg-gray-300 md:flex-row min-h-screen w-full">
-      <%- include('../partials/_nav.ejs') %> <%- body %>
-    </div>
-    <script type="application/javascript" src="./javascript/script.js"></script>
-    <script
-      type="application/javascript"
-      src="../javascript/script.js"
-    ></script>
-  </body>
+  <link type="text/css" rel="stylesheet" href="../css/style.css" />
+  <link rel="stylesheet" href="../css/tailwind.css">
+  <link rel="shortcut icon" href="../images/TradeByte-Favicon.png" type="image/x-icon">
+  <title>TradeByte</title>
+</head>
+
+<body>
+  <div class="md:flex flex-col md:flex-row min-h-screen w-full">
+    <%- include('../partials/_nav.ejs') %> <%- body %>
+  </div>
+  <script type="application/javascript" src="../javascript/script.js"></script>
+</body>
+
 </html>
