--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,4 @@
-<div
-  class="flex flex-col justify-center align-center text-center text-gray-600 mt-4"
->
+<div class="my-5 flex flex-col justify-center align-center text-center text-gray-800 mt-4">
   <p>Made with ❤ by TradeByte Team</p>
   <p>&copy; Copyright 2020</p>
 </div>
