--- a/views/addBalance.ejs
+++ b/views/addBalance.ejs
@@ -12,7 +12,7 @@
     <hr class="line" />
 
     <div class="container py-16 mx-auto">
-      <h3 class="text-2xl">Your Current Balance:<b> <%= user.balance%> </b></h3>
+      <h3 class="text-2xl">Your Balance:<b> <%= user.balance%> </b></h3>
       <form
         action="/addBalance"
         method="POST"
