Fixed Sign Up BG

--- a/public/css/tailwind.css
+++ b/public/css/tailwind.css
@@ -13,6 +13,7 @@ body {
   overflow-x: hidden;
   box-sizing: border-box;
   background: linear-gradient(122.51deg, #e6ecfc 30%, #7fb4f1 100%) !important;
+  scroll-behavior: smooth;
 }
 
 @tailwind components;
