--- a/views/login.ejs
+++ b/views/login.ejs
@@ -288,7 +288,7 @@
                 >
                   It was really good collaborating with a team while learning a
                   stack together. Luckily, we had a good mentor who guided us
-                  all
+                  all.
                 </p>
               </div>
 
