--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,9 +1,9 @@
-<section class="w-full min-h-screen bg-gray-800">
+<section class="w-full min-h-screen">
   <div class="form max-w-sm mx-auto mt-6" style="min-width: 300px">
-    <h2 class="text-blue-200 text-center text-4xl lg:text-5xl font-semibold">
+    <h2 class="text-gray-800 text-center text-4xl lg:text-5xl font-semibold">
       TradeByte
     </h2>
-    <div class="flex flex-col shadow-lg rounded-lg bg-gray-300 mt-4">
+    <div class="flex flex-col shadow-lg rounded-lg bg-white mt-4">
       <div
         class="rounded-t mb-0 px-6 py-6 text-lg font-bold w-full flex justify-center items-center flex-col"
       >
