--- a/views/error/500.ejs
+++ b/views/error/500.ejs
@@ -15,6 +15,11 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
+    <link
+      rel="shortcut icon"
+      href="../images/TradeByte-Favicon.png"
+      type="image/x-icon"
+    />
 
     <style>
       #error {
